Fixed alignment issue on mobile.

--- a/src/components/DraftCard.module.scss
+++ b/src/components/DraftCard.module.scss
@@ -67,12 +67,9 @@
 }
 
 .player-analysis {
+    flex: 0 0 100%;
     order: 3;
     padding: 10px;
-
-    @include media-breakpoint-up(sm) {
-        flex: 0 0 100%;
-    }
 
     @include media-breakpoint-up(xl) {
         order: 2;
